fix: ajustei o navbar quebrando em tablets

--- a/styles/responsividade_index.css
+++ b/styles/responsividade_index.css
@@ -2,6 +2,10 @@
 
 @media (max-width: 1200px) {
 
+    header ul {
+        font-size: 12px;
+    }
+
     .flex ul li {
         margin: 0 11px;
     }
